--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,5 @@
 {
     // Install LSP-json to get validation and autocompletion in this file.
-    "extraPaths": ["cpy-lib"],
+    "extraPaths": ["lib"],
+    // "exclude": ["lib"],
 }
