broken, but an improvement?

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,4 @@
 {
     // Install LSP-json to get validation and autocompletion in this file.
-    "extraPaths": ["lib"],
-    // "exclude": ["lib"],
+    "extraPaths": ["../lib" ]
 }
