--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v5.0.0
     hooks:
     -   id: check-added-large-files # - prevents giant files from being committed.
     -   id: check-ast # - simply checks whether the files parse as valid python.
@@ -10,8 +10,8 @@ repos:
     -   id: check-case-conflict # - checks for files that would conflict in case-insensitive filesystems.
     -   id: check-docstring-first # - checks a common error of defining a docstring after code.
     -   id: check-executables-have-shebangs # - ensures that (non-binary) executables have a shebang.
-    -   id: check-json # - checks json files for parseable syntax.
-    -   id: pretty-format-json # - sets a standard for formatting json files.
+    # -   id: check-json # - checks json files for parseable syntax.
+    # -   id: pretty-format-json # - sets a standard for formatting json files.
     -   id: check-merge-conflict # - checks for files that contain merge conflict strings.
     -   id: check-symlinks # - checks for symlinks which do not point to anything.
     -   id: check-toml # - checks toml files for parseable syntax.
@@ -30,10 +30,10 @@ repos:
     -   id: trailing-whitespace # - trims trailing whitespace
 
 -   repo: https://github.com/psf/black
-    rev: 22.1.0
+    rev: 25.1.0
     hooks:
       - id: black
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
+    rev: 1.19.1
     hooks:
     -   id: blacken-docs
