--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,8 @@ repos:
     -   id: check-case-conflict # - checks for files that would conflict in case-insensitive filesystems.
     -   id: check-docstring-first # - checks a common error of defining a docstring after code.
     -   id: check-executables-have-shebangs # - ensures that (non-binary) executables have a shebang.
-    # -   id: check-json # - checks json files for parseable syntax.
-    # -   id: pretty-format-json # - sets a standard for formatting json files.
+    -   id: check-json # - checks json files for parseable syntax.
+    -   id: pretty-format-json # - sets a standard for formatting json files.
     -   id: check-merge-conflict # - checks for files that contain merge conflict strings.
     -   id: check-symlinks # - checks for symlinks which do not point to anything.
     -   id: check-toml # - checks toml files for parseable syntax.
