--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,9 @@ repos:
     -   id: check-executables-have-shebangs # - ensures that (non-binary) executables have a shebang.
     -   id: check-json # - checks json files for parseable syntax.
     -   id: pretty-format-json # - sets a standard for formatting json files.
+        args:
+            - --autofix
     -   id: check-merge-conflict # - checks for files that contain merge conflict strings.
-    -   id: check-symlinks # - checks for symlinks which do not point to anything.
-    -   id: check-toml # - checks toml files for parseable syntax.
-    -   id: check-vcs-permalinks # - ensures that links to vcs websites are permalinks.
-    -   id: check-xml # - checks xml files for parseable syntax.
-    -   id: check-yaml # - checks yaml files for parseable syntax.
     -   id: debug-statements # - checks for debugger imports and py37+ `breakpoint()` calls in python source.
     -   id: detect-private-key # - detects the presence of private keys.
     -   id: end-of-file-fixer # - ensures that a file is either empty, or ends with one newline.
@@ -26,7 +23,6 @@ repos:
     -   id: mixed-line-ending # - replaces or checks mixed line ending.
     -   id: name-tests-test # - this verifies that test files are named correctly.
     -   id: requirements-txt-fixer # - sorts entries in requirements.txt.
-    -   id: sort-simple-yaml # - sorts simple yaml files which consist only of top-level keys, preserving comments and blocks.
     -   id: trailing-whitespace # - trims trailing whitespace
 
 -   repo: https://github.com/psf/black
