--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,6 @@
 {
-    // Install LSP-json to get validation and autocompletion in this file.
-    "extraPaths": ["./lib" ]
+  "extraPaths": [
+    "./src",
+    "./src/lib"
+  ]
 }
